Workaround attempt to fix width visibility when viewing a very wide dynamic table.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1282,6 +1282,10 @@ button[aria-expanded=true] {
 }
 
 .msf-menu-show-full-nav-component {
+  width: calc(100% - 300px);
+}
+
+.msf-menu-show-full-nav-component-wide {
   width: 100%;
 }
 
